# neurospora-phenome-architecture

./: .gitignore  CITATION.cff  README.md  environment.yml  pyproject.toml  requirements.txt
config/: assay_modules.csv  dreyfuss_essential_genes.csv.example  ko_status_exclusions.csv  source_manifest.csv
reports/source_data/: README.md
scripts/: analyze_assay_dependencies.py  analyze_collection_selection.py  analyze_functional_architecture.py  analyze_profiles.py  analyze_sensitivity.py  download_sources.py  inventory_sources.py  prepare_collection_status.py  prepare_phenotype_matrix.py  run_pipeline.py  validate_results.py
src/phenome_architecture/: analysis.py  collection.py  dependency.py  io.py
tests/: test_collection.py  test_dependency.py
