[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "neurospora-phenome-architecture"
version = "1.0.0"
description = "Phenotype-panel and knockout-collection analyses for the Neurospora crassa deletion resource."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Ezekiel Ahn"}]
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "scipy>=1.10",
  "scikit-learn>=1.3",
  "openpyxl>=3.1",
  "PyYAML>=6.0",
  "xlrd>=2.0"
]

[tool.setuptools.packages.find]
where = ["src"]
